web/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  @apply font-geist;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  padding: 0;
  margin: 0;
  color: hsl(240 10% 3.9%);
  --sb-track-color: #f3f3f3;
  --sb-thumb-color: #000000;
  --sb-size: 10px;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

input,
button,
textarea,
select {
  font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

#root {
  isolation: isolate;
}

.ck-balloon-panel {
  z-index: 99999 !important;
}

.ck-content {
  height: 100% !important;
  padding-top: 0.25rem !important;
  padding-bottom: 0.25rem !important;
  padding-left: 0.75rem !important;
  padding-right: 0.75rem !important;
  border-radius: 0.375rem !important;
  border-width: 1px;
  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);

  border-color: #e5e7eb !important;
}

.ck.ck-editor__editable.ck-focused:not(.ck-editor__nested-editable) {
  box-shadow: none !important;
}

.ck-placeholder {
  @apply font-geist text-muted;
  font-size: 14px !important;
  margin: 0 !important;
}

.ck.ck-editor__editable_inline > *:last-child {
  margin-bottom: 0 !important;
}

.ck.ck-editor__editable_inline > *:first-child {
  margin-top: 0 !important;
}

.editor-container__editor {
  height: 100% !important;
}

.editor-container {
  height: 100% !important;
}
.leaflet-popup-content {
  @apply m-2 font-geist;
}
.leaflet-popup-content-wrapper {
  @apply border rounded-lg shadow;
}

.leaflet-popup-content p {
  margin: unset;
}

body::-webkit-scrollbar {
  width: var(--sb-size);
}

body::-webkit-scrollbar-track {
  background: var(--sb-track-color);
  border-radius: 20px;
}

body::-webkit-scrollbar-thumb {
  background: var(--sb-thumb-color);
  border-radius: 20px;
}

@supports not selector(::-webkit-scrollbar) {
  body {
    scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
  }
}

